Resolve "Implement a Oauth provider in Funkwhale"
